grammar/lexer.go

//line lexer.go.rl:1
// Generated code. DO NOT EDIT

package main

import (
    "fmt"
    "strconv"
    "time"
)


//line lexer.go:15
const logparser_start int = 64
const logparser_first_final int = 64
const logparser_error int = 0

const logparser_en_main int = 64


//line lexer.go.rl:22


type lexer struct {
    nowTime time.Time
    res []*LogLine[*CombatLine]

    // It must be an array containting the data to process.
    data string

    // Data end pointer. This should be initialized to p plus the data length on every run of the machine. In Java and Ruby code this should be initialized to the data length.
    pe int

    // Data pointer. In C/D code this variable is expected to be a pointer to the character data to process.
    // It should be initialized to the beginning of the data block on every run of the machine.
    // In Java and Ruby it is used as an offset to data and must be an integer.
    // In this case it should be initialized to zero on every run of the machine.
    p int


    // This must be a pointer to character data. In Java and Ruby code this must be an integer. See Section 6.3 for more information.
    ts int

    // Also a pointer to character data.
    te int

    // This must be an integer value. It is a variable sometimes used by scanner code to keep track of the most recent successful pattern match.
    act int

    // Current state. This must be an integer and it should persist across invocations of the machine when the data is broken into blocks that are processed independently. This variable may be modified from outside the execution loop, but not from within.
    cs int

    // This must be an integer value and will be used as an offset to stack, giving the next available spot on the top of the stack.
    top int
}

func newLexer(data string, nowTime time.Time) *lexer {
    lex := &lexer{
        nowTime: nowTime,
        data: data,
        pe: len(data),
    }
    
//line lexer.go:66
	{
	 lex.cs = logparser_start
	 lex.ts = 0
	 lex.te = 0
	 lex.act = 0
	}

//line lexer.go.rl:64
    return lex
}

func (lex *lexer) Lex(out *yySymType) int {
    eof := lex.pe
    var tok int
    
//line lexer.go:82
	{
	if ( lex.p) == ( lex.pe) {
		goto _test_eof
	}
	switch  lex.cs {
	case 64:
		goto st_case_64
	case 0:
		goto st_case_0
	case 65:
		goto st_case_65
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 102:
		goto st_case_102
	}
	goto st_out
tr0:
//line lexer.go.rl:131
( lex.p) = ( lex.te) - 1

	goto st64
tr8:
//line lexer.go.rl:72
 lex.te = ( lex.p)+1
{tok = COMBAT; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr11:
//line lexer.go.rl:87
 lex.te = ( lex.p)+1
{tok = ARROW; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr12:
//line lexer.go.rl:102
( lex.p) = ( lex.te) - 1
{
                // fmt.Printf("int: %q\n", lex.data[lex.ts:lex.te])
                res, err := strconv.Atoi(lex.data[lex.ts:lex.te])
                if err != nil {
                    lex.Error(err.Error())
                    {( lex.p)++;  lex.cs = 64; goto _out }
                }
                out.Int = res
                tok = INT;
                {( lex.p)++;  lex.cs = 64; goto _out }
            }
	goto st64
tr21:
//line lexer.go.rl:91
 lex.te = ( lex.p)+1
{
                tok = TIME;
                // fmt.Printf("time:%q\n", lex.data[lex.ts:lex.te])
                res, err := lex.parseTime(lex.data[lex.ts:lex.te])
                if err != nil {
                    lex.Error(err.Error())
                    {( lex.p)++;  lex.cs = 64; goto _out }
                }
                out.Time = res
                {( lex.p)++;  lex.cs = 64; goto _out }
            }
	goto st64
tr34:
//line lexer.go.rl:90
 lex.te = ( lex.p)+1
{tok = FRIENDLY_FIRE; out.Bool = true; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr40:
//line lexer.go.rl:73
 lex.te = ( lex.p)+1
{tok = EQ_DELIM; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr41:
//line lexer.go.rl:124
( lex.p) = ( lex.te) - 1
{
                tok = STRING;
                // fmt.Printf("name: %q\n", lex.data[lex.ts:lex.te])
                out.String = lex.data[lex.ts:lex.te]
                {( lex.p)++;  lex.cs = 64; goto _out }
            }
	goto st64
tr56:
//line lexer.go.rl:81
 lex.te = ( lex.p)+1
{tok = CONNECT_TO_GAME_SESSION_PREFIX; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr67:
//line lexer.go.rl:82
 lex.te = ( lex.p)+1
{tok = LOCAL_CLIENT_TEAM; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr68:
//line lexer.go.rl:77
 lex.te = ( lex.p)+1
{tok = int('\t'); {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr69:
//line lexer.go.rl:130
 lex.te = ( lex.p)+1
{tok = EOL; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr70:
//line lexer.go.rl:131
 lex.te = ( lex.p)+1

	goto st64
tr72:
//line lexer.go.rl:74
 lex.te = ( lex.p)+1
{tok = int('\''); {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr73:
//line lexer.go.rl:78
 lex.te = ( lex.p)+1
{tok = int('('); {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr74:
//line lexer.go.rl:80
 lex.te = ( lex.p)+1
{tok = int(')'); {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr75:
//line lexer.go.rl:75
 lex.te = ( lex.p)+1
{tok = int(','); {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr79:
//line lexer.go.rl:76
 lex.te = ( lex.p)+1
{tok = int(';'); {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr90:
//line lexer.go.rl:79
 lex.te = ( lex.p)+1
{tok = int('|'); {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr91:
//line lexer.go.rl:131
 lex.te = ( lex.p)
( lex.p)--

	goto st64
tr93:
//line lexer.go.rl:102
 lex.te = ( lex.p)
( lex.p)--
{
                // fmt.Printf("int: %q\n", lex.data[lex.ts:lex.te])
                res, err := strconv.Atoi(lex.data[lex.ts:lex.te])
                if err != nil {
                    lex.Error(err.Error())
                    {( lex.p)++;  lex.cs = 64; goto _out }
                }
                out.Int = res
                tok = INT;
                {( lex.p)++;  lex.cs = 64; goto _out }
            }
	goto st64
tr95:
//line lexer.go.rl:113
 lex.te = ( lex.p)
( lex.p)--
{
                // fmt.Printf("float: %q\n", lex.data[lex.ts:lex.te])
                res, err := strconv.ParseFloat(lex.data[lex.ts:lex.te], 32)
                if err != nil {
                    lex.Error(err.Error())
                    {( lex.p)++;  lex.cs = 64; goto _out }
                }
                out.Float = float32(res)
                tok = FLOAT;
                {( lex.p)++;  lex.cs = 64; goto _out }
            }
	goto st64
tr96:
//line NONE:1
	switch  lex.act {
	case 12:
	{( lex.p) = ( lex.te) - 1
tok = START; {( lex.p)++;  lex.cs = 64; goto _out }}
	case 13:
	{( lex.p) = ( lex.te) - 1
tok = DAMAGE; {( lex.p)++;  lex.cs = 64; goto _out }}
	case 14:
	{( lex.p) = ( lex.te) - 1
tok = KILL; {( lex.p)++;  lex.cs = 64; goto _out }}
	case 15:
	{( lex.p) = ( lex.te) - 1
tok = HEAL; {( lex.p)++;  lex.cs = 64; goto _out }}
	case 23:
	{( lex.p) = ( lex.te) - 1

                tok = STRING;
                // fmt.Printf("name: %q\n", lex.data[lex.ts:lex.te])
                out.String = lex.data[lex.ts:lex.te]
                {( lex.p)++;  lex.cs = 64; goto _out }
            }
	}
	
	goto st64
tr100:
//line lexer.go.rl:124
 lex.te = ( lex.p)
( lex.p)--
{
                tok = STRING;
                // fmt.Printf("name: %q\n", lex.data[lex.ts:lex.te])
                out.String = lex.data[lex.ts:lex.te]
                {( lex.p)++;  lex.cs = 64; goto _out }
            }
	goto st64
tr125:
//line lexer.go.rl:88
 lex.te = ( lex.p)+1
{tok = DAMAGE_HULL_START; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
tr131:
//line lexer.go.rl:89
 lex.te = ( lex.p)+1
{tok = DAMAGE_SHIELD_START; {( lex.p)++;  lex.cs = 64; goto _out }}
	goto st64
	st64:
//line NONE:1
 lex.ts = 0

		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof64
		}
	st_case_64:
//line NONE:1
 lex.ts = ( lex.p)

//line lexer.go:512
		switch  lex.data[( lex.p)] {
		case 9:
			goto tr68
		case 10:
			goto tr69
		case 32:
			goto tr71
		case 39:
			goto tr72
		case 40:
			goto tr73
		case 41:
			goto tr74
		case 44:
			goto tr75
		case 45:
			goto st9
		case 47:
			goto tr77
		case 59:
			goto tr79
		case 60:
			goto st19
		case 61:
			goto st32
		case 67:
			goto st72
		case 68:
			goto st79
		case 72:
			goto st84
		case 75:
			goto st87
		case 83:
			goto st92
		case 95:
			goto tr77
		case 104:
			goto st96
		case 108:
			goto st97
		case 115:
			goto st102
		case 124:
			goto tr90
		}
		switch {
		case  lex.data[( lex.p)] < 48:
			if 11 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 13 {
				goto tr70
			}
		case  lex.data[( lex.p)] > 57:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto tr77
				}
			case  lex.data[( lex.p)] >= 65:
				goto tr77
			}
		default:
			goto st69
		}
		goto st0
st_case_0:
	st0:
		 lex.cs = 0
		goto _out
tr71:
//line NONE:1
 lex.te = ( lex.p)+1

	goto st65
	st65:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof65
		}
	st_case_65:
//line lexer.go:591
		if  lex.data[( lex.p)] == 67 {
			goto st1
		}
		goto tr91
	st1:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof1
		}
	st_case_1:
		if  lex.data[( lex.p)] == 77 {
			goto st2
		}
		goto tr0
	st2:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof2
		}
	st_case_2:
		if  lex.data[( lex.p)] == 66 {
			goto st3
		}
		goto tr0
	st3:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof3
		}
	st_case_3:
		if  lex.data[( lex.p)] == 84 {
			goto st4
		}
		goto tr0
	st4:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof4
		}
	st_case_4:
		if  lex.data[( lex.p)] == 32 {
			goto st5
		}
		goto tr0
	st5:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof5
		}
	st_case_5:
		if  lex.data[( lex.p)] == 32 {
			goto st6
		}
		goto tr0
	st6:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof6
		}
	st_case_6:
		if  lex.data[( lex.p)] == 32 {
			goto st7
		}
		goto tr0
	st7:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof7
		}
	st_case_7:
		if  lex.data[( lex.p)] == 124 {
			goto st8
		}
		goto tr0
	st8:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof8
		}
	st_case_8:
		if  lex.data[( lex.p)] == 32 {
			goto tr8
		}
		goto tr0
	st9:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof9
		}
	st_case_9:
		if  lex.data[( lex.p)] == 62 {
			goto tr11
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st66
		}
		goto st0
	st66:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof66
		}
	st_case_66:
		if  lex.data[( lex.p)] == 46 {
			goto st67
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st66
		}
		goto tr93
	st67:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof67
		}
	st_case_67:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st67
		}
		goto tr95
tr77:
//line NONE:1
 lex.te = ( lex.p)+1

//line lexer.go.rl:124
 lex.act = 23;
	goto st68
tr112:
//line NONE:1
 lex.te = ( lex.p)+1

//line lexer.go.rl:84
 lex.act = 13;
	goto st68
tr115:
//line NONE:1
 lex.te = ( lex.p)+1

//line lexer.go.rl:86
 lex.act = 15;
	goto st68
tr120:
//line NONE:1
 lex.te = ( lex.p)+1

//line lexer.go.rl:85
 lex.act = 14;
	goto st68
tr124:
//line NONE:1
 lex.te = ( lex.p)+1

//line lexer.go.rl:83
 lex.act = 12;
	goto st68
	st68:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof68
		}
	st_case_68:
//line lexer.go:741
		if  lex.data[( lex.p)] == 95 {
			goto tr77
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 47 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr77
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr77
			}
		default:
			goto tr77
		}
		goto tr96
	st69:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof69
		}
	st_case_69:
		switch  lex.data[( lex.p)] {
		case 46:
			goto st67
		case 47:
			goto tr77
		case 95:
			goto tr77
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr97
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr77
			}
		default:
			goto tr77
		}
		goto tr93
tr97:
//line NONE:1
 lex.te = ( lex.p)+1

	goto st70
	st70:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof70
		}
	st_case_70:
//line lexer.go:794
		switch  lex.data[( lex.p)] {
		case 46:
			goto st67
		case 47:
			goto tr77
		case 58:
			goto st10
		case 95:
			goto tr77
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st71
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr77
			}
		default:
			goto tr77
		}
		goto tr93
	st71:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof71
		}
	st_case_71:
		switch  lex.data[( lex.p)] {
		case 46:
			goto st67
		case 47:
			goto tr77
		case 95:
			goto tr77
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st71
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr77
			}
		default:
			goto tr77
		}
		goto tr93
	st10:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof10
		}
	st_case_10:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st11
		}
		goto tr12
	st11:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof11
		}
	st_case_11:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st12
		}
		goto tr12
	st12:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof12
		}
	st_case_12:
		if  lex.data[( lex.p)] == 58 {
			goto st13
		}
		goto tr12
	st13:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof13
		}
	st_case_13:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st14
		}
		goto tr12
	st14:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof14
		}
	st_case_14:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st15
		}
		goto tr12
	st15:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof15
		}
	st_case_15:
		if  lex.data[( lex.p)] == 46 {
			goto st16
		}
		goto tr12
	st16:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof16
		}
	st_case_16:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st17
		}
		goto tr12
	st17:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof17
		}
	st_case_17:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st18
		}
		goto tr12
	st18:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof18
		}
	st_case_18:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto tr21
		}
		goto tr12
	st19:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof19
		}
	st_case_19:
		if  lex.data[( lex.p)] == 70 {
			goto st20
		}
		goto st0
	st20:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof20
		}
	st_case_20:
		if  lex.data[( lex.p)] == 114 {
			goto st21
		}
		goto st0
	st21:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof21
		}
	st_case_21:
		if  lex.data[( lex.p)] == 105 {
			goto st22
		}
		goto st0
	st22:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof22
		}
	st_case_22:
		if  lex.data[( lex.p)] == 101 {
			goto st23
		}
		goto st0
	st23:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof23
		}
	st_case_23:
		if  lex.data[( lex.p)] == 110 {
			goto st24
		}
		goto st0
	st24:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof24
		}
	st_case_24:
		if  lex.data[( lex.p)] == 100 {
			goto st25
		}
		goto st0
	st25:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof25
		}
	st_case_25:
		if  lex.data[( lex.p)] == 108 {
			goto st26
		}
		goto st0
	st26:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof26
		}
	st_case_26:
		if  lex.data[( lex.p)] == 121 {
			goto st27
		}
		goto st0
	st27:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof27
		}
	st_case_27:
		if  lex.data[( lex.p)] == 70 {
			goto st28
		}
		goto st0
	st28:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof28
		}
	st_case_28:
		if  lex.data[( lex.p)] == 105 {
			goto st29
		}
		goto st0
	st29:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof29
		}
	st_case_29:
		if  lex.data[( lex.p)] == 114 {
			goto st30
		}
		goto st0
	st30:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof30
		}
	st_case_30:
		if  lex.data[( lex.p)] == 101 {
			goto st31
		}
		goto st0
	st31:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof31
		}
	st_case_31:
		if  lex.data[( lex.p)] == 62 {
			goto tr34
		}
		goto st0
	st32:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof32
		}
	st_case_32:
		if  lex.data[( lex.p)] == 61 {
			goto st33
		}
		goto st0
	st33:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof33
		}
	st_case_33:
		if  lex.data[( lex.p)] == 61 {
			goto st34
		}
		goto st0
	st34:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof34
		}
	st_case_34:
		if  lex.data[( lex.p)] == 61 {
			goto st35
		}
		goto st0
	st35:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof35
		}
	st_case_35:
		if  lex.data[( lex.p)] == 61 {
			goto st36
		}
		goto st0
	st36:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof36
		}
	st_case_36:
		if  lex.data[( lex.p)] == 61 {
			goto st37
		}
		goto st0
	st37:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof37
		}
	st_case_37:
		if  lex.data[( lex.p)] == 61 {
			goto tr40
		}
		goto st0
	st72:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof72
		}
	st_case_72:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr77
		case 111:
			goto st73
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 47 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr77
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr77
			}
		default:
			goto tr77
		}
		goto tr100
	st73:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof73
		}
	st_case_73:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr77
		case 110:
			goto st74
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 47 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr77
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr77
			}
		default:
			goto tr77
		}
		goto tr100
	st74:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof74
		}
	st_case_74:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr77
		case 110:
			goto st75
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 47 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr77
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr77
			}
		default:
			goto tr77
		}
		goto tr100
